header, section1 & section2 finished

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -13,7 +13,7 @@ footer {
 
     &__logoFooter {
       color: $color-primary;
-      font-size: 1.625em;
+      font-size: 1.625rem;
       font-weight: 300;
       text-align: left;
     }
