--- a/styles/_section3.scss
+++ b/styles/_section3.scss
@@ -178,7 +178,7 @@
 
     h3 {
       padding: 3.75em 0 0em;
-      font-size: 36px;
+      font-size: 2.25rem;
       font-weight: 400;
       line-height: 2.625em;
       text-align: center;
@@ -208,7 +208,7 @@
 
         &__basic {
           font-family: $font-primary;
-          font-size: 20px;
+          font-size: 1.25rem;
           font-weight: 700;
           line-height: 1.5em;
         }
@@ -217,7 +217,7 @@
           width: 59;
           padding-top: 0em;
           font-family: $font-secondary;
-          font-size: 46px;
+          font-size: 2.875rem;
           font-weight: 300;
           line-height: 3.75em;
           margin: 0 auto;
@@ -227,7 +227,7 @@
           width: 4.625em;
           margin: 0 auto;
           font-family: $font-primary;
-          font-size: 12px;
+          font-size: .75rem;
           font-weight: 700;
           line-height: 0.6306em;
           color: #13253b;
@@ -274,7 +274,7 @@
               left: 1.3125em;
               margin: 0 0.3125em 1.1875em;
               font-family: $font-secondary;
-              font-size: 14px;
+              font-size: .875rem;
               font-weight: 400;
               line-height: 1.1919em;
               text-align: initial;
