--- a/styles/_section1.scss
+++ b/styles/_section1.scss
@@ -4,7 +4,7 @@
   padding-bottom: 3em;
 
   h1 {
-    font-size: 30.4px;
+    font-size: 1.9rem;
     font-weight: 300;
     margin: 0em auto;
     padding: 0em 1em 0.3em;
@@ -107,7 +107,7 @@
 
       &__title {
         text-align: center;
-        font-size: 20px;
+        font-size: 1.25rem;
         font-weight: 1000;
         line-height: 1.5em;
         letter-spacing: .3725em;
@@ -116,7 +116,7 @@
       }
 
       &__text {
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: 400;
         line-height: 1.25em;
         text-align: center;
@@ -136,7 +136,7 @@
     align-items: center;
     h3 {
       width: 100%;
-      font-size: 36px;
+      font-size: 2.25rem;
       font-weight: 400;
       line-height: 2.625em;
       text-align: center;
