--- a/styles/_section2.scss
+++ b/styles/_section2.scss
@@ -15,7 +15,7 @@
       &__rectangleMobile {
         position: absolute;
         width: 90.12px;
-        top: .9rem;
+        top: 0.9rem;
       }
 
       &__rectanglePc {
@@ -43,10 +43,10 @@
     }
   }
 
-  &__card2row {
+  &__card2 {
     @include __card;
 
-    &__containerImg1 {
+    &__containerImg2 {
       @include containerImg;
 
       &__circleBlue {
@@ -89,12 +89,12 @@
       @include containerText;
       padding-top: 1.5625em;
       background-color: #fff;
-      border: .0625em solid #e8e9ed;
-      border-radius: .1875em;
+      border: 0.0625em solid #e8e9ed;
+      border-radius: 0.1875em;
 
       &__title {
         @include title;
-        margin: .3125em auto 1.0625em;
+        margin: 0.3125em auto 1.0625em;
       }
 
       &__text {
@@ -108,13 +108,13 @@
 
     &__containerImg {
       @include containerImg;
-      border: .0625em solid #e8e9ed;
-      border-radius: .3125em;
+      border: 0.0625em solid #e8e9ed;
+      border-radius: 0.3125em;
       position: relative;
 
       &__backgroundGreen {
-        border-radius: .3125em;
-        border: .0625em;
+        border-radius: 0.3125em;
+        border: 0.0625em;
         position: absolute;
         padding: 0em;
         left: 0em;
@@ -139,6 +139,7 @@
     width: 100%;
     display: flex;
     margin: 0 auto;
+    align-items: center;
     padding: 0;
 
     &__limit {
@@ -155,7 +156,8 @@
       background-color: #fff;
 
       &__containerImg1 {
-        width: 40%;
+        width: 60%;
+        margin-right: 0;
 
         &__rectangleMobile {
           display: none;
@@ -164,140 +166,139 @@
         &__rectanglePc {
           display: block;
           position: absolute;
-          width: 40%;
-          top: 3.75em;
-          left: 17.5em;
+          width: 35%;
+          top: 3em;
+          left: 20em;
         }
 
         &__pc {
           flex: 1;
           position: absolute;
-          width: 86%;
-          top: 7.1875em;
-          right: 1.875em;
-        }
-
-        &__mobile {
-          z-index: 2;
-          width: 93%;
-          top: 1.5625em;
-          left: 5%;
-        }
-
-        &__circleBlue {
-          position: absolute;
-          width: 70%;
-          top: .625em;
-          left: 1.25em;
+          width: 60%;
+          top: 7em;
+          left: 8em;
         }
       }
 
-      &__containerText1 {
+      &__containerText {
         width: 45%;
-        padding: 5em 2.5em;
+        padding: 5.5em 2em 3em;
 
         &__title {
           font-size: 2.25rem;
-          font-weight: 400;
-          line-height: 2.625em;
+          font-weight: 500;
+          padding: 0;
+          margin: 0;
         }
 
         &__text {
           font-size: 1rem;
           font-weight: 400;
-          line-height: 1.375em;
           text-align: left;
+          margin: 2em 0 3.1em;
+          font-size: 1rem;
+          font-weight: 500;
         }
 
         &__linePink {
           background-color: $color-quaternary;
-          height: .25em;
+          height: 0.25em;
           width: 70%;
-          margin: 2em 5em 0em;
-        }
-        &__lineBlue {
-          background-color: $color-primary;
-          height: .25em;
-          width: 70%;
-          margin: 2em 5em 0em;
-        }
-      }
-    }
-
-    .section2__card2row {
-      display: flex;
-      flex-wrap: nowrap;
-      background-color: #fff;
-      border: .0625em solid #e8e9ed;
-
-      .section2__card2row__containerImg1 {
-        width: 50%;
-
-        .section2__card2row__containerImg1__circleBlue {
-          z-index: 1;
-          width: 60%;
-          top: .625em;
-          left: 1.25em;
-        }
-
-        &__mobile {
-          z-index: 2;
-          width: 80%;
-          top: 1.5625em;
-          left: 5%;
-        }
-      }
-
-      &__containerText1 {
-        width: 41%;
-        padding: 8em 0em;
-
-        &__lineBlue {
-          background-color: $color-primary;
-          height: .25rem;
-          width: 70%;
-          margin: 10em 5em 0rem;
+          margin: 0em 0em 2.5em;
         }
       }
     }
 
     .section2__card2 {
       display: flex;
-      background-color: transparent;
-      width: 95.25em;
-      height: 23.125em;
+      width: 70.25em;
+      flex-direction: row;
+      background-color: #fff;
 
-      &__containerText2 {
-        width: 38.75em;
-        height: 23.125em;
-        margin-left: 12.5em;
+      &__containerImg2 {
+        // width: 40%;
+        margin-left: 0;
+        width: 27.5em;
+
+        &__circleBlue {
+          display: block;
+          position: absolute;
+          width: 19rem;
+          left: 4em;
+          top: 0.625em;
+        }
+
+        &__mobile {
+          position: absolute;
+          width: 26.7rem;
+          top: 1.6em;
+          left: 4.4em;
+        }
+      }
+
+      &__containerText {
+        justify-content: center;
+        width: 41%;
+        padding: 4.5em 1em 3.5em 0;
 
         &__title {
-          margin: 0 1.25em;
+          margin: 0;
+          font-size: 2.25rem;
+          font-weight: 400;
+          text-align: left;
+        }
+
+        &__text {
+          margin: 2.5em 0;
+          padding: 0;
+          font-size: 1rem;
+        }
+
+        &__lineBlue {
+          background-color: $color-primary;
+          height: 0.25em;
+          width: 70%;
+          margin: 2em 0em 0em;
+        }
+      }
+    }
+
+    .section2__card3 {
+      display: flex;
+      width: 70.25em;
+      flex-direction: row;
+      background-color: transparent;
+      border: none;
+
+      &__containerText {
+        width: 55%;
+        padding: 4.4em 2em 0;
+
+        &__title {
+          margin: 0em;
           width: 70%;
           text-align: left;
           font-size: 2.25rem;
           font-weight: 400;
-          line-height: 2.625em;
         }
 
         &__text {
           width: 75%;
           font-size: 1rem;
           font-weight: 400;
-          line-height: 1.375em;
           text-align: left;
+          margin: 2em 0 3em;
         }
 
         &__lineGreen {
           background-color: $color-tertiary;
-          height: .25em;
-          width: 56%;
-          margin: 10em 4em 0em;
+          height: 0.25em;
+          width: 60%;
+          margin: 0em 0em 0em;
         }
       }
 
-      &__containerImg2 {
+      &__containerImg {
         width: 27.5em;
         height: 23.125em;
         margin-left: 3.75em;
