--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -63,7 +63,7 @@
       &__text {
         width: 100%;
         color: $color-primary;
-        font-size: 11px;
+        font-size: .6875rem;
         font-weight: 700;
         line-height: 1.125em;
         letter-spacing: .205em;
@@ -91,7 +91,7 @@
         border-radius: .1875em;
         padding: .75em;
         width: 1.5em;
-        font-size: 34;
+        font-size: 2.125rem;
         position: relative;
       }
 
@@ -105,7 +105,7 @@
       &__text {
         width: 90%;
         font-family: Open Sans;
-        font-size: 0.79rem;
+        font-size: .79rem;
         font-weight: 400;
         line-height: 1.23em;
         position: absolute;
@@ -122,7 +122,7 @@
         padding: 1.4em 7.5em;
         background-color: $color-primary;
         font-family: $font-secondary;
-        font-size: 13px;
+        font-size: .8125rem;
         font-weight: 700;
         box-shadow: 0.125em 0.5625em 1.5625em -0.625em $color-primary;
       }
@@ -154,7 +154,7 @@
 
       h1 {
         width: 100%;
-        font-size: 49px;
+        font-size: 3.0625rem;
         font-weight: 400;
         line-height: 3.5956em;
         text-align: left;
@@ -168,7 +168,7 @@
           // &__icon {
           // }
           &__text {
-            font-size: 16px;
+            font-size: 1rem;
             font-weight: 600;
             line-height: 1.375em;
             text-align: left;
