--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -39,7 +39,7 @@
         width: 100%;
 
         &__icon {
-          width: 20px;
+          width: 1.25rem;
         }
 
         &__text {
@@ -65,7 +65,6 @@
         color: $color-primary;
         font-size: .6875rem;
         font-weight: 700;
-        line-height: 1.125em;
         letter-spacing: .205em;
       }
 
@@ -89,25 +88,21 @@
         appearance: none;
         border: .0625em solid #95989a;
         border-radius: .1875em;
-        padding: .75em;
-        width: 1.5em;
-        font-size: 2.125rem;
-        position: relative;
+        padding: 0.75rem;
+        position: relative;;
       }
 
       &__checkbox:checked {
         background: no-repeat;
         background-image: url("../images/check.png");
-        background-size: 20;
+        background-size: 1rem;
         background-position: center;
       }
 
       &__text {
         width: 90%;
-        font-family: Open Sans;
         font-size: .79rem;
         font-weight: 400;
-        line-height: 1.23em;
         position: absolute;
         left: 2.1875em;
         top: 0em;
@@ -136,66 +131,85 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 31.25em;
 
-    .container4 {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      width: 101.625em;
-      padding-left: 1.25em;
-    }
+    // .container4 {
+    //   background-color: red;
+    //   display: flex;
+    //   flex-direction: row;
+    //   justify-content: center;
+    //   width: 101.625em;
+    //   padding-left: 1.25em;
+    // }
     &__header {
+      background-color: pink;
       display: flex;
       flex-direction: column;
       width: 30%;
       margin: 0 0em;
-      padding: 0em 0em 3.125em 1.875em;
+      padding: 5em 0em 8.5em 0em;
 
       h1 {
         width: 100%;
-        font-size: 3.0625rem;
-        font-weight: 400;
-        line-height: 3.5956em;
+        font-size: 3rem;
+        font-weight: 500;
         text-align: left;
-        padding-bottom: 1.875em;
+        padding: 0em 0em 0.5em;
       }
 
       &__contact {
         width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 0.5em;
+
         &__pack {
-          display:block;
-          // &__icon {
-          // }
+          width: 85%;
+          &:nth-child(1) {
+            grid-column: span 2;
+          }
+
+          &__icon {
+            width: 1.5em;
+            max-width: 100%;
+          }
+
           &__text {
+            display: block;
             font-size: 1rem;
-            font-weight: 600;
-            line-height: 1.375em;
+            font-weight: 500;
             text-align: left;
+            width: 90%;
           }
         }
       }
     }
 
     &__form {
-      display: flex;
-      flex-direction: column;
+      display: inline-block;
       width: 31%;
-      padding: 4.6875em 0 0em .9375em;
+      padding: 0em 0 3.8em 0em;
+      margin: 0;
 
       &__pack {
+        // padding-bottom: 1em;
         input {
           width: 96%;
         }
       }
 
+      
       &__terms {
-        width: 98%;
+        margin: 0 0.6em;
+        width: 97.5%;
+
+        &__checkbox{
+          margin: 0 0 0 -0.8em;
+        }
       }
 
       button {
-        top: 8.125em;
-        left: 13.75em;
+        top: 10.5em;
+        left: 16.75em;
       }
     }
   }
