--- a/styles/index.css
+++ b/styles/index.css
@@ -648,6 +648,7 @@ header .header__container__img {
   padding: 1.5em 0em 1.7em;
   position: relative;
   width: 80%;
+  box-sizing: border-box;
 }
 .section3__card3:nth-of-type(1) {
   border: 0.0625em solid #eb476e;
@@ -762,12 +763,14 @@ header .header__container__img {
   .section3 {
     display: flex;
     flex-direction: column;
+    margin: 0;
+    padding: 0;
   }
   .section3 h3 {
-    padding: 3.75em 0 0em;
+    margin: 0;
+    padding: 3em 0 1em;
     font-size: 2.25rem;
     font-weight: 400;
-    line-height: 2.625em;
     text-align: center;
   }
   .section3 .limit3 {
@@ -779,28 +782,40 @@ header .header__container__img {
     min-width: 62.5em;
     box-sizing: border-box;
     display: flex;
+    width: 90%;
     flex-direction: row;
+    justify-content: space-between;
+    padding: 3em 0em;
   }
   .section3 .section3__card3 {
+    margin: 0 5em;
     display: flex;
     flex-direction: column;
     height: 28.8125em;
-    width: 25em;
+    width: 23em;
+    align-items: center;
+    justify-content: center;
+    padding: 1.75em 0 0;
+    margin: 0 0;
   }
   .section3 .section3__card3 button {
-    display: none;
+    display: block;
+    clear: absolute;
+    transform: translate(-22%, 430%);
   }
   .section3 .section3__card3__containerPrice {
-    top: 0em;
     display: flex;
     flex-direction: column;
-    padding: 1.5625em 4.6875em;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 0em 0em;
   }
   .section3 .section3__card3__containerPrice__basic {
     font-family: "Raleway", sans-serif;
     font-size: 1.25rem;
     font-weight: 700;
-    line-height: 1.5em;
+    padding-bottom: 0.75em;
   }
   .section3 .section3__card3__containerPrice__price {
     width: 59;
@@ -808,59 +823,31 @@ header .header__container__img {
     font-family: "Open Sans", sans-serif;
     font-size: 2.875rem;
     font-weight: 300;
-    line-height: 3.75em;
     margin: 0 auto;
   }
   .section3 .section3__card3__containerPrice__subtitle {
-    width: 4.625em;
+    width: 8em;
     margin: 0 auto;
-    font-family: "Raleway", sans-serif;
     font-size: 0.75rem;
     font-weight: 700;
-    line-height: 0.6306em;
+    text-align: center;
     color: #13253b;
   }
-  .section3 .section3__card3__containerInputsFeature {
-    background-color: aqua;
+  .section3 .section3__card3__containerFeature {
     display: flex;
     flex-direction: column;
-    width: 250%;
-    position: relative;
-    left: 0em;
-    top: 0;
-    padding-top: 1.125em;
-    right: 0em;
+    text-align: center;
+    padding: 0em;
+    text-align: center;
+    margin: 0 auto;
   }
-  .section3 .section3__card3__containerInputsFeature__pack {
-    background-color: red;
+  .section3 .section3__card3__containerFeature li {
+    margin: 0 auto;
     display: flex;
-    flex-direction: row;
+    align-items: center;
   }
-  .section3 .section3__card3__containerInputsFeature__pack__input {
-    width: 10%;
-    display: flex;
-    clear: absolute;
-  }
-  .section3 .section3__card3__containerInputsFeature__pack__input__checkbox {
-    width: 0.6875em;
-    margin: 0em auto 1.4375em;
-  }
-  .section3 .section3__card3__containerInputsFeature__pack__text {
-    display: block;
-    position: absolute;
-    width: 70%;
-    right: 0em;
-    padding-top: 0.5em;
-  }
-  .section3 .section3__card3__containerInputsFeature__pack__text__title {
-    width: 7.1875em;
-    left: 1.3125em;
-    margin: 0 0.3125em 1.1875em;
-    font-family: "Open Sans", sans-serif;
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1.1919em;
-    text-align: initial;
+  .section3 .section3__card3__containerFeature li img {
+    margin: 0.5em;
   }
 }
 .section4 {
@@ -901,7 +888,7 @@ header .header__container__img {
   width: 100%;
 }
 .section4__header__contact__pack__icon {
-  width: 20px;
+  width: 1.25rem;
 }
 .section4__header__contact__pack__text {
   color: #a5a5a5;
@@ -921,7 +908,6 @@ header .header__container__img {
   color: #08a6e4;
   font-size: 0.6875rem;
   font-weight: 700;
-  line-height: 1.125em;
   letter-spacing: 0.205em;
 }
 .section4__form__pack input {
@@ -942,23 +928,19 @@ header .header__container__img {
   appearance: none;
   border: 0.0625em solid #95989a;
   border-radius: 0.1875em;
-  padding: 0.75em;
-  width: 1.5em;
-  font-size: 2.125rem;
+  padding: 0.75rem;
   position: relative;
 }
 .section4__form__terms__checkbox:checked {
   background: no-repeat;
   background-image: url("../images/check.png");
-  background-size: 20;
+  background-size: 1rem;
   background-position: center;
 }
 .section4__form__terms__text {
   width: 90%;
-  font-family: Open Sans;
   font-size: 0.79rem;
   font-weight: 400;
-  line-height: 1.23em;
   position: absolute;
   left: 2.1875em;
   top: 0em;
@@ -989,57 +971,64 @@ header .header__container__img {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 31.25em;
-  }
-  .section4 .container4 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 101.625em;
-    padding-left: 1.25em;
   }
   .section4__header {
+    background-color: pink;
     display: flex;
     flex-direction: column;
     width: 30%;
     margin: 0 0em;
-    padding: 0em 0em 3.125em 1.875em;
+    padding: 5em 0em 8.5em 0em;
   }
   .section4__header h1 {
     width: 100%;
-    font-size: 3.0625rem;
-    font-weight: 400;
-    line-height: 3.5956em;
+    font-size: 3rem;
+    font-weight: 500;
     text-align: left;
-    padding-bottom: 1.875em;
+    padding: 0em 0em 0.5em;
   }
   .section4__header__contact {
     width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0.5em;
   }
   .section4__header__contact__pack {
-    display: block;
+    width: 85%;
+  }
+  .section4__header__contact__pack:nth-child(1) {
+    grid-column: span 2;
+  }
+  .section4__header__contact__pack__icon {
+    width: 1.5em;
+    max-width: 100%;
   }
   .section4__header__contact__pack__text {
+    display: block;
     font-size: 1rem;
-    font-weight: 600;
-    line-height: 1.375em;
+    font-weight: 500;
     text-align: left;
+    width: 90%;
   }
   .section4__form {
-    display: flex;
-    flex-direction: column;
+    display: inline-block;
     width: 31%;
-    padding: 4.6875em 0 0em 0.9375em;
+    padding: 0em 0 3.8em 0em;
+    margin: 0;
   }
   .section4__form__pack input {
     width: 96%;
   }
   .section4__form__terms {
-    width: 98%;
+    margin: 0 0.6em;
+    width: 97.5%;
+  }
+  .section4__form__terms__checkbox {
+    margin: 0 0 0 -0.8em;
   }
   .section4__form button {
-    top: 8.125em;
-    left: 13.75em;
+    top: 10.5em;
+    left: 16.75em;
   }
 }
 footer {
@@ -1047,7 +1036,7 @@ footer {
   box-shadow: 0em -0.3125em 2.5em 0.3125em rgba(0, 0, 0, 0.2);
   position: relative;
   margin: 15.625em 0em 0;
-  padding: 1.2rem 0;
+  padding: 1rem 0;
 }
 footer .pack {
   display: block;
