--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -17,7 +17,7 @@ header {
     font-size: 1rem;
     font-weight: 400;
     margin: 0 auto;
-    padding: 0 3em;
+    padding: 0 4em;
   }
 
   button {
@@ -54,7 +54,6 @@ header {
       width: 15.125em;
       font-size: 49px;
       font-weight: 400;
-      line-height: 3.5625em;
       text-align: center;
     }
 
@@ -64,6 +63,7 @@ header {
       font-size: 16px;
       font-weight: 400;
       line-height: 1.375em;
+      padding: 0em 0 1.5em;
     }
 
     button {
