--- a/styles/index.css
+++ b/styles/index.css
@@ -89,7 +89,7 @@ header p {
   font-size: 1rem;
   font-weight: 400;
   margin: 0 auto;
-  padding: 0 3em;
+  padding: 0 4em;
 }
 header button {
   border-radius: 25%;
@@ -128,7 +128,6 @@ header .header__container__img {
     width: 15.125em;
     font-size: 49px;
     font-weight: 400;
-    line-height: 3.5625em;
     text-align: center;
   }
   header p {
@@ -137,6 +136,7 @@ header .header__container__img {
     font-size: 16px;
     font-weight: 400;
     line-height: 1.375em;
+    padding: 0em 0 1.5em;
   }
   header button {
     line-height: 1.375em;
