--- a/styles/_section3.scss
+++ b/styles/_section3.scss
@@ -48,6 +48,7 @@
         box-shadow: 0.125em 0.5625em 3.125em -1.5625em $color-quaternary;
         width: 85%;
         padding: 2.7em 0 2.7em;
+        padding: 4em 0 2.7em;
 
         .section3__card3__containerPrice {
           transform: translate(0, -20%);
@@ -77,7 +78,7 @@
 
         width: 85%;
         padding: 2.7em 0 2.7em;
-
+        padding: 4em 0 2.7em;
         .section3__card3__containerPrice {
           transform: translate(0, -43%);
         }
@@ -111,7 +112,7 @@
         }
 
         button {
-          top: 21em;
+          top: 20em;
           right: 6.8em;
           box-shadow: 0.125em 0.5625em 1.5625em -0.625em $color-tertiary;
         }
@@ -188,21 +189,21 @@
     .limit3 {
       @include limit;
       display: flex;
-      width: 90%;
+      width: 100%;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: center;
       padding: 3em 0em;
+      // display: none;
     }
 
     .section3__card3 {
-      margin: 0 5em;
+      margin: 0 2.2em;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      width: 25em;
+      width: 23.5em;
       padding: 4em 0 4em;
-      margin: 0 0;
 
       button {
         display: block;
@@ -275,8 +276,8 @@
 
         &:nth-of-type(1):hover {
           box-shadow: 0.125em 0.5625em 3.125em -1.5625em $color-quaternary;
-          width: 30%;
-          transform: scale(110%);
+          width: 27em;
+          // transform: scale(110%);
 
           .section3__card3__containerPrice {
             transform: translate(0, -20%);
@@ -304,8 +305,9 @@
         &:nth-of-type(2):hover {
           box-shadow: 0.125em 0.5625em 3.125em -1.5625em $color-primary;
 
-          width: 30%;
-          transform: scale(110%);
+          width: 25em;
+          margin: 0 1.45em;
+          // transform: scale(110%);
 
           .section3__card3__containerPrice {
             transform: translate(0, -20%);
