--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,7 +1,7 @@
 header {
   display: block;
   width: 100%;
-  margin: 0px auto;
+  margin: 0rem auto;
   text-align: center;
 
   h1 {
@@ -41,7 +41,7 @@ header {
       height: 16.6875rem;
       display: block;
       object-fit: cover;
-      margin: 0px auto;
+      margin: 0rem auto;
     }
   }
 }
@@ -52,7 +52,7 @@ header {
 
     h1 {
       width: 15.125em;
-      font-size: 49px;
+      font-size: 3.0625rem;
       font-weight: 400;
       text-align: center;
     }
@@ -60,7 +60,7 @@ header {
     p {
       width: 25em;
       font-family: Open Sans;
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 400;
       line-height: 1.375em;
       padding: 0em 0 1.5em;
@@ -69,14 +69,14 @@ header {
     button {
       line-height: 1.375em;
       text-align: center;
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 700;
       margin: 1.4375em auto 0em;
       padding: 1.375em 9.6875em;
     }
 
     .header__container {
-      width: 100%;
+      width: 101.625rem;
 
       &__img {
         width: 100%;
